custom \maketitle styles and a more simplified document.tex

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -85,7 +85,7 @@
 	"latex-workshop.latex.autoBuild.run": "onSave",
 	"latex-workshop.latex.autoClean.run": "onBuilt",
 	"latex-workshop.view.pdf.viewer": "tab",
-	"latex-workshop.chktex.enabled": true,
+	"latex-workshop.chktex.enabled": false,
 	"cSpell.language": "en-GB",
 	"cSpell.enabledLanguageIds": ["latex"]
 }
