default code styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,6 @@
 {
+	"editor.insertSpaces": false,
+	"editor.detectIndentation": false,
 	"latex-workshop.latex.tools": [
 		{
 			"name": "latexmk",
