--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -131,7 +131,7 @@
 	"latex-workshop.latex.autoBuild.run": "onSave",
 	"latex-workshop.latex.autoClean.run": "onBuilt",
 	"latex-workshop.view.pdf.viewer": "tab",
-	"latex-workshop.chktex.enabled": false,
+	"latex-workshop.linting.chktex.enabled": false,
 	"cSpell.language": "en-GB",
 	"cSpell.enabledLanguageIds": [
 		"latex"
