--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,6 @@
 	"latex-workshop.bibtex-format.tab": "tab",
 	"latex-workshop.latex.autoBuild.run": "onSave",
 	"latex-workshop.latex.autoClean.run": "onBuilt",
-	"latex-workshop.latex.clean.method": "glob",
 	"latex-workshop.latex.clean.fileTypes": [
 		"*.aux",
 		"*/*.aux",
@@ -12,6 +11,7 @@
 		"*.blg",
 		"*.fdb_latexmk",
 		"*.fls",
+		"*.lof",
 		"*.log",
 		"*.out",
 		"*.synctex(busy)",
@@ -19,6 +19,7 @@
 		"*.synctex.gz(busy)",
 		"*.toc"
 	],
+	"latex-workshop.latex.clean.method": "glob",
 	"latex-workshop.latex.tools": [
 		{
 			"name": "latexmk",
