--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
 	"recommendations": [
 		"streetsidesoftware.code-spell-checker",
-		"james-yu.latex-workshop",
-		"geoffkaile.latex-count"
+		"geoffkaile.latex-count",
+		"james-yu.latex-workshop"
 	]
 }
